--- a/browny-v1.0/index.html
+++ b/browny-v1.0/index.html
@@ -103,8 +103,8 @@
 				<div class="row">
 					<div class="col-md-12 text-center">
 						<div class="header-text">
-							<h2>hi <span>,</span> i am <br> browny <br> star <span>.</span>   </h2>
-							<p>ui/ux designer and web developer</p>
+							<h2>hi <span>,</span> i am <br> kevin <br> frühwirth <span>.</span>   </h2>
+							<p>programmer</p>
 							<a href="assets/download/browney.txt" download>download resume</a>
 						</div><!--/.header-text-->
 					</div><!--/.col-->
